--- a/templates/default/dnssec.html
+++ b/templates/default/dnssec.html
@@ -19,50 +19,83 @@
     </ol>
 </nav>
 
-{% if idn_zone_name %}
-<h5 class="mb-3">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ idn_zone_name }}" ({{ domain_name }})</h5>
-{% else %}
-<h5 class="mb-3">{% trans %}DNSSEC keys for zone{% endtrans %} "{{ domain_name }}"</h5>
-{% endif %}
-
-<table class="table table-striped table-hover table-sm">
-    <tr>
-        <th>{% trans %}ID{% endtrans %}</th>
-        <th>{% trans %}Type{% endtrans %}</th>
-        <th>{% trans %}Tag{% endtrans %}</th>
-        <th>{% trans %}Algorithm{% endtrans %}</th>
-        <th>{% trans %}Bits{% endtrans %}</th>
-        <th>{% trans %}Active{% endtrans %}</th>
-        <th>&nbsp;</th>
-    </tr>
-
-    {% for item in keys %}
-    {% if item[5] %}
-    {% set button_title = 'Deactivate zone key' %}
-    {% set active = 'Yes' %}
-    {% else %}
-    {% set button_title = 'Activate zone key' %}
-    {% set active = 'No' %}
-    {% endif %}
-    <tr>
-        <td>{{ item[0] }}</td>
-        <td>{{ item[1] }}</td>
-        <td>{{ item[2] }}</td>
-        <td>{{ algorithms[item[3]] }}</td>
-        <td>{{ item[4] }}</td>
-        <td>{{ active|trans }}</td>
-        <td>
-            <a class="btn btn-outline-primary btn-sm"
-               href="index.php?page=dnssec_edit_key&id={{ zone_id }}&key_id={{ item[0] }}"><i class="bi bi-pencil-square"></i>
-                {{ button_title|trans }}</a>
-            <a class="btn btn-outline-danger btn-sm" href="index.php?page=dnssec_delete_key&id={{ zone_id }}&key_id={{ item[0] }}"><i
-                    class="bi bi-trash"></i> {% trans %}Delete zone key{% endtrans %}</a>
-        </td>
-    </tr>
-    {% endfor %}
-
-</table>
-<input class="btn btn-primary btn-sm" type="button" onClick="location.href='index.php?page=dnssec_add_key&id={{ zone_id }}'"
-       value="{% trans %}Add new key{% endtrans %}">
-<input class="btn btn-secondary btn-sm" type="button" onClick="location.href='index.php?page=dnssec_ds_dnskey&id={{ zone_id }}'"
-       value="{% trans %}Show DS and DNSKEY{% endtrans %}">
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3 d-flex justify-content-between align-items-center">
+        <strong>
+            <i class="bi bi-shield-lock me-2"></i>
+            {% if idn_zone_name %}
+            {% trans %}DNSSEC keys for zone{% endtrans %} "{{ idn_zone_name }}" ({{ domain_name }})
+            {% else %}
+            {% trans %}DNSSEC keys for zone{% endtrans %} "{{ domain_name }}"
+            {% endif %}
+        </strong>
+        <div>
+            <a href="index.php?page=dnssec_add_key&id={{ zone_id }}" class="btn btn-primary btn-sm">
+                <i class="bi bi-plus-circle text-white me-1"></i>{% trans %}Add new key{% endtrans %}
+            </a>
+            <a href="index.php?page=dnssec_ds_dnskey&id={{ zone_id }}" class="btn btn-secondary btn-sm">
+                <i class="bi bi-key text-white me-1"></i>{% trans %}Show DS and DNSKEY{% endtrans %}
+            </a>
+        </div>
+    </div>
+    <div class="card-body p-0">
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-sm mb-0">
+                <thead class="table-light">
+                    <tr>
+                        <th>{% trans %}ID{% endtrans %}</th>
+                        <th>{% trans %}Type{% endtrans %}</th>
+                        <th>{% trans %}Tag{% endtrans %}</th>
+                        <th>{% trans %}Algorithm{% endtrans %}</th>
+                        <th>{% trans %}Bits{% endtrans %}</th>
+                        <th>{% trans %}Active{% endtrans %}</th>
+                        <th class="text-end">{% trans %}Actions{% endtrans %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if keys is empty %}
+                    <tr>
+                        <td colspan="7" class="text-center py-3">{% trans %}No DNSSEC keys found for this zone{% endtrans %}</td>
+                    </tr>
+                    {% else %}
+                    {% for item in keys %}
+                    {% if item[5] %}
+                    {% set button_title = 'Deactivate key' %}
+                    {% set active = 'Yes' %}
+                    {% set button_icon = 'pause-circle' %}
+                    {% else %}
+                    {% set button_title = 'Activate key' %}
+                    {% set active = 'No' %}
+                    {% set button_icon = 'play-circle' %}
+                    {% endif %}
+                    <tr>
+                        <td>{{ item[0] }}</td>
+                        <td><span class="badge bg-secondary">{{ item[1] }}</span></td>
+                        <td>{{ item[2] }}</td>
+                        <td>{{ algorithms[item[3]] }}</td>
+                        <td>{{ item[4] }}</td>
+                        <td>
+                            {% if item[5] %}
+                            <span class="badge bg-success">{{ active|trans }}</span>
+                            {% else %}
+                            <span class="badge bg-warning text-dark">{{ active|trans }}</span>
+                            {% endif %}
+                        </td>
+                        <td class="text-end">
+                            <div class="gap-2">
+                                <a class="btn btn-sm btn-outline-primary" href="index.php?page=dnssec_edit_key&id={{ zone_id }}&key_id={{ item[0] }}" title="{% if item[5] %}{% trans %}Deactivate this key{% endtrans %}{% else %}{% trans %}Activate this key{% endtrans %}{% endif %}">
+                                    <i class="bi bi-{{ button_icon }} text-primary"></i> <span class="d-none d-md-inline text-primary">{% if item[5] %}{% trans %}Deactivate{% endtrans %}{% else %}{% trans %}Activate{% endtrans %}{% endif %}</span>
+                                </a>
+                                <a class="btn btn-sm btn-outline-danger" href="index.php?page=dnssec_delete_key&id={{ zone_id }}&key_id={{ item[0] }}">
+                                    <i class="bi bi-trash text-danger"></i> <span class="d-none d-md-inline text-danger">{% trans %}Delete{% endtrans %}</span>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
