--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -88,6 +88,7 @@
                     </ul>
                 </li>
                 {% endif %}
+                {% if perm_view_others or perm_edit_own or perm_edit_others or perm_add_new or perm_is_godlike %}
                 <li class="p-1">
                     <a href="index.php?page=users" class="nav-link text-{{ current_page in ['users', 'add_user', 'edit_user', 'list_perm_templ', 'add_perm_templ', 'edit_perm_templ', 'list_log_users'] ? 'primary' : 'secondary' }}"><i class="bi bi-people"></i></a>
                     <a class="text-{{ current_page in ['users', 'add_user', 'edit_user', 'list_perm_templ', 'add_perm_templ', 'edit_perm_templ', 'list_log_users'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
@@ -116,6 +117,7 @@
                         {% endif %}
                     </ul>
                 </li>
+                {% endif %}
                 {% if perm_zone_master_add %}
                 <li class="p-1">
                     <a href="index.php?page=list_zone_templ" class="nav-link text-{{ current_page in ['list_zone_templ', 'add_zone_templ', 'edit_zone_templ', 'list_template_zones'] ? 'primary' : 'secondary' }} text-center"><i
