--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -261,7 +261,7 @@
         </div>
     </div>
     {% endif %}
-    {% if permissions['user_view_others'] or permissions['user_edit_own'] or permissions['user_edit_others'] or permissions['user_add_new'] or permissions['user_is_ueberuser'] %}
+    {% if permissions['user_view_others'] or permissions['user_edit_others'] or permissions['user_add_new'] or permissions['user_is_ueberuser'] %}
     <div class="col mb-1 card-item">
         <div class="card h-100 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
