--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -36,6 +36,23 @@
         </div>
     </div>
     {% endif %}
+    {% if is_limited_user and permissions['user_edit_own'] %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-person-fill-gear display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}My Profile{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Edit your account details{% endtrans %}</p>
+                <a href="index.php?page=edit_user&id={{ user_id }}" class="btn btn-light btn-sm mt-2" data-testid="edit-profile-link">
+                    <span class="d-none d-lg-inline">{% trans %}Edit profile{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Profile{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
     {% if permissions['search'] %}
     <div class="col mb-1 card-item">
         <div class="card h-100 shadow-sm">
