--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -213,9 +213,11 @@
                 <button type="submit" class="btn btn-primary btn-sm" name="edit">
                     <i class="bi bi-check-circle me-1 text-white"></i>{% trans %}Update{% endtrans %}
                 </button>
+                {% if perm_zone_templ_add or perm_is_godlike %}
                 <button type="submit" class="btn btn-success btn-sm" name="save_as">
                     <i class="bi bi-save me-1 text-white"></i>{% trans %}Save As{% endtrans %}
                 </button>
+                {% endif %}
                 <a href="index.php?page=list_zone_templ" class="btn btn-secondary btn-sm">
                     <i class="bi bi-x-circle me-1 text-white"></i>{% trans %}Cancel{% endtrans %}
                 </a>
